@@ -1,3 +1,8 @@
+2004-02-25  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* g++.dg/eh/simd-1.C: Tweak again for SPARC.
+	* g++.dg/eh/simd-2.C: Likewise.
+
 2004-02-24  Michael Matz  <matz@suse.de>
 
 	* gcc.dg/i386-regparm.c: New test.
